# llm.rs

./: .gitignore  Cargo.toml  Readme.md  index.html  pyrightconfig.json
.github/workflows/: rust.yml
src/: attention_block.rs  attention_layer.rs  embedding_layer.rs  gemm.wgsl  gpt2.rs  gpu_backend.rs  layer_norm.rs  lib.rs  linear_layer.rs  main.rs  self_attention.rs  test.rs  tools.rs
src/gpu_backend/: backend.rs  bench.rs  element_wise_add.wgsl  gelu.wgsl  gemm.wgsl  layer_norm.wgsl  mod.rs  tensor.rs  test.rs
src/gpu_backend/pipelines/: element_wise_add.rs  gelu_pipeline.rs  layer_norm_pipeline.rs  linear_pipeline.rs  mod.rs
src/gpu_backend/shaders/: attv_matmul.wgsl  gemm_0.wgsl  gemm_1.wgsl  merge_heads.wgsl  qk_matmul.wgsl  softmax.wgsl  split_qkv.wgsl
src/layers/: gelu.rs  layer_norm.rs  linear_layer.rs  mod.rs  rms_norm.rs  traits.rs
src/model/: builder.rs  config.rs  mod.rs  traits.rs
src/model/gpt2/: mod.rs
src/model/qwen3/: mod.rs
test/: test_output.py
