[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "llmrs"

[dependencies]
ndarray = "0.16.1"
tiktoken-rs = "0.7.0"
safetensors = "0.6.2"
bytemuck = "1.24"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libm = "0.2"
wgpu = "27.0"
flume = "0.11"
pollster = "0.4.0"
rand="0.6"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
