[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"
default-run = "llm-rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "llmrs"

[[bin]]
name = "bench-gemm"
path = "src/gpu_backend/bench.rs"


[dependencies]
ndarray = "0.16.1"
tokenizers = "0.22"
safetensors = "0.6.2"
bytemuck = "1.24"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libm = "0.2"
wgpu = "27.0"
flume = "0.11"
pollster = "0.4.0"
rand="0.6"
clap = { version = "4.5.51", features = ["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
